# experimental

./: .gitignore  README.md
.circleci/: config.yml
.github/workflows/: gh-pages.yaml
c++/: .gitignore
c++/playground/: CMakeLists.txt  playground.sln  playground.vcxproj  playground.vcxproj.filters
c++/playground/include/: coroutines.h
c++/playground/main/: main.cpp
c++/playground/src/: coroutines.cpp  coroutines.tpp
c++/playground/tests/: coroutine_test.cpp  dummy_test.cpp
devops/mongo/: mongo-configmap.yaml  mongo-ingress.yaml  mongo-secret.yaml  mongodb.yaml  mongoexpress.yaml  nginx.sh  tls-secret.yaml
devops/nginx-test/: nginx-deployment.yaml  nginx-service.yaml
go/elastic-search/: docker-compose.yml  elastic_test.go  go.mod  go.sum  services.go  util.go
go/milvus/: docker-compose.yml  go.mod  go.sum  milvus_test.go  services.go  util.go
go/neo4j/: docker-compose.yml  go.mod  go.sum  neo4j_test.go  service.go
go/playground/: go.mod  go.sum
go/test-container/: container_test.go  go.mod  go.sum
java/: pom.xml
java/duplicate-finder/: pom.xml
java/j-calculator/: pom.xml
java/java-algorithms/: pom.xml
java/java-junit/: pom.xml
java/java-proxy/: pom.xml
java/java-utils/: pom.xml
python/concurrency/: coroutines.py
webdev-bootcamp/14_and_15 Javascript-Intro/: karel.js  playground.js
webdev-bootcamp/18.x - Advanced JS And DOM/: index.js
webdev-bootcamp/19.x-JQuery/: index.html  index.js  styles.css
webdev-bootcamp/2.4 Movie Ranking Project/: index.html
webdev-bootcamp/20.x-Simons-game/: index.js
webdev-bootcamp/26-Project-TodoList-Application/: index.js  package-lock.json
webdev-bootcamp/29.x-capstone-project/: index.js  package-lock.json  package.json
webdev-bootcamp/3.1 Nesting and Indentation/: index.html
webdev-bootcamp/3.3 Image Elements/: index.html
webdev-bootcamp/33.x-MongoDB/: mongodb.js
webdev-bootcamp/34-Mongoose/: app.js
webdev-bootcamp/35.x/: index.js  (+1 more)
(+210 files in other folders)
